functioning time coloumn in stops join table

--- a/views/city.erb
+++ b/views/city.erb
@@ -2,11 +2,11 @@
 
 <h3>Trains that Stop Here</h3>
 
-  <% if @city.trains %>
+  <% if @city.trains.any? %>
     <ul>
       <% @city.trains.each do |train| %>
-        <li><a href="/trains/<%= @train.id %>"><%= @train.name %></a></li>
-        #/trains/12  Thomas
+        <li><a href="/trains/<%= train[0].id %>"><%= train[0].name + "-TIMES" + train[1] %></a></li>
+      
       <% end %>
     </ul>
   <% else %>
@@ -17,10 +17,12 @@
 
 <form action="/cities/<%= @city.id %>" method="post">
   <div class="form-group">
-    <label for="train_name">train name</label>
+    <label for="train_name">Train Name</label>
     <input id="train_name" name="train_name" class="form-control" type="text">
+    <label for="time">Train Time</label>
+    <input id="time" name="time" class="form-control" type="datetime-local">
   </div>
-  <button type="submit" class="btn">Add Train</button>
+  <button type="submit" class="btn">Add Train Info</button>
 </form>
 
 
