--- a/views/train.erb
+++ b/views/train.erb
@@ -2,10 +2,10 @@
 
 <h3>Stops for this train</h3>
 
-  <% if @train.cities %>
+  <% if @train.cities.any? %>
     <ul>
       <% @train.cities.each do |city| %>
-        <li><a href="/cities/<%= @city.id %>"<%= @city.name %></a></li>
+        <li><a href="/cities/<%= city.id %>"><%= city.name %></a></li>
       <% end %>
     </ul>
   <% else %>
@@ -14,7 +14,7 @@
 
 <h4>Add a city:</h4>
 
-<form action="/trains/<%= @train.id %>/cities" method="post">
+<form action="/trains/<%= @train.id %>" method="post"> 
   <div class="form-group">
     <label for="city_name">city name</label>
     <input id="city_name" name="city_name" class="form-control" type="text">
